--- a/_account.html
+++ b/_account.html
@@ -1,8 +1,8 @@
 <div id="account">
     <h3>License information</h3>
     <ul>
-        <li>Email: janos.hardi@prezi.com</li>
-        <li>License: Pro</li>
-        <li>Expires: 21/02/2020</li>
+        <li><strong>Email:</strong> janos.hardi@prezi.com</li>
+        <li><strong>License:</strong> Pro</li>
+        <li><strong>Expires:</strong> 21/02/2020</li>
     </ul>
 </div>
